frontend/src/styles/main.scss
/* ... */
button, a {
  cursor: pointer;
}
.page-container {
  display: grid;
  min-height: 100vh;
  padding: 0 90px;
  max-width: 1500px;
  margin-left: auto;
  margin-right: auto;
  box-shadow: 0px 2px 10px #00000021;
  background: white;
  grid-template-columns: auto 1fr;
  @media only screen and (max-width: 1200px) {
    display: block;
    padding: 0;
  }
}
.propose-edition {
  border-left: 2px solid #7070708c;
  padding-left: 20px;
  @media only screen and (max-width: 980px) {
    grid-row: 2/3;
    border-left: none;
    padding-left: 0;
  }
}
ul {
  margin:0;
}
h1.hidden-title {
  height: 0;
  width: 0;
  color:transparent;
  padding: 0;
  margin: 0;
}
h2 {
 font-size: 1.8em;
 margin: 10px 0;
 @media only screen and (max-width: 700px) {
  font-size: 1.6em;
 }
}
h3{
  font-size: 1.3em;
  margin: 10px 0;
}
h1, h2, h3, h4, h5 {
  font-family: 'Roboto Mono', monospace;
  font-weight: 500;
}
p {
  font-size: 1em;
}
article {
  border-top: 2px solid black;
  padding-top: 10px;
  margin-top: 30px;
}
a {
  text-decoration: none;
}
hr {
  border: none;
  border-top: 2px solid black;
  margin-top: 35px;
}
.push-right {
  margin-left: auto;
}
.button-container {
  display: flex;
}
html {
  scroll-behavior: smooth;  
}
// Checkbox #checkbox START
input {
  &.check {
    width: 20px;
    align-items: center;
    justify-content: center;
    display: flex;
    margin-left: auto;
    margin-right: auto;
    padding-left: 10px;
    padding-right: 10px;
    height: 30px;
  }
}
// Checkbox END
// Select #select START
select {
  display: block;
  width: 100%;
  min-width: fit-content;
  border: 2px solid #0f528d;
  font-size: 1em;
  height: 30px;
  padding: 0 20px 0 0;
  font-weight: 500;
  font-family: 'Roboto Mono', monospace;
  border-radius: 0;
  background: white;
  &:focus {
    outline: 5px solid #8EC0EC;
  }
  option {
    background: white;
    color: black;
  }
  &.blue {
    background: #0f528d;
    color: white; 
  }
}
// Select #select END
// Buttons - START #buttons
button, a{
  font-family: 'Roboto Mono', monospace;
  &.black {
    background: black;
    color: white;
    border: 2px solid black;
  }
  &.blue {
    background: $active-blue;
    color: white;
    border: 2px solid $active-blue;
    transition: all 0.2s;
    &:hover {
      background: white;
      color: $active-blue !important;
    }
  }
  &.bordered-blue {
    background: white;
    color: $active-blue;
    border: 2px solid $active-blue;
    transition: all 0.2s;
    &:hover {
      background: $active-blue;
      color: white !important;
    }
  }
  &.red {
    background: #E65841;;
    color: black;
    border: 2px solid #E65841;
    transition: all 0.2s;
    &:hover {
      background: white;
      color: black !important;
    }
  }
  &.bordered-red {
    background: white;
    color: black;
    border: 2px solid #E65841;
    transition: all 0.2s;
    &:hover {
      background: #E65841;
      color: black !important;
    }
  }
  &.black {
    background: black;
    color: white;
    border: 2px solid black;
    transition: all 0.2s;
    &:hover {
      background: white;
      color: black !important;
    }
  }
  &.bordered-black {
    background: white;
    color: black;
    border: 2px solid black;
    transition: all 0.2s;
    &:hover {
      background: black;
      color: white !important;
    }
  }
  &.small {
    font-size: 0.9em;
    padding-left: 15px;
    padding-right: 15px;
    font-weight: 500;
    max-height: 45px;
    min-height: 40px;
  }
  &.xsmall {
    font-size: 0.9em;
    padding-left: 15px;
    padding-right: 15px;
    font-weight: 500;
    max-height: 45px;
    min-height: 30px;
  }
  &.medium {
    font-size: 1.1em;
    padding: 8px 10px;
    font-weight: 400px;
  }
  &.large {
    font-size: 1.3em;
  }
  &.xlarge{
    font-size: 1.5em;
    height: 50px;
    padding: 0 50px;
    display: flex;
    align-items: center;
    justify-content: center;
  }
}
// Buttons - END
// List #list - START
ul {
  padding-left: 0;
  li {
    list-style-type: none;
  }
}
// List END
// Tooltip  #tooltip -START
.tooltip-container{
  .label-text {
    margin-right: 5px;
  }
  .label {
    display: flex;
  }
  .tooltip-toggle {
    cursor: pointer;
    position: relative;
    margin-left: 5px;
    .i-wrapper {
      background: $active-blue;
      border-radius: 15px;
      height: 20px;
      width: 20px;
      display: flex;
      justify-content: center;
      align-items: center;
      transition: all 0.2s;
      i {
        color: white;
        transition: all 0.2s;
      }
      &:hover {
        background: white;
        i {
          color: $active-blue;
        }
      }
    }
    &::before {
      position: absolute;
      top: -80px;
      left: -80px;
      background-color: white;
      border-radius: 5px;
      color: black;
      content: attr(aria-label);
      padding: 1rem;
      text-transform: none;
      transition: all 0.5s ease;
      width: 160px;
      box-shadow: 3px 3px 8px 3px #00000045;
    }
    &::after {
      position: absolute;
      top: -12px;
      left: 9px;
      border-left: 5px solid transparent;
      border-right: 5px solid transparent;
      border-top: 5px solid #2B222A;
      content: " ";
      font-size: 0;
      line-height: 0;
      margin-left: -5px;
      width: 0;
    }
    &::before,
    &::after {
      color: black;
      font-family: monospace;
      font-size: 1em;
      opacity: 0;
      pointer-events: none;
      text-align: center;
    }
    &:focus::before,
    &:focus::after,
    &:hover::before,
    &:hover::after {
      opacity: 1;
      transition: all 0.25s ease;
    }
  }
}
// Tooltip END
.sr-only {
  position: absolute;
}
fieldset {
  border:none;
  padding: 0;
}
/* Overall page style - END */
// Input search START 
input:focus,
a:focus,
button:focus, 
textarea:focus {
  outline: 5px solid #8EC0EC;
}
.search-input {
  input {
    height: 45px;
  }
}
/* ... */

